# Chimiquizz-Desktop

./: Cargo.toml  README.md
assets/: credits.txt
assets/data/: entities1.lvl  entities2.lvl  entities3.lvl  formatting.md  texts.txt
src/: functions.rs  main.rs  states.rs
