[package]
name = "chimiquizz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
macroquad = "0.3.25"
named_tuple = "0.1"

# Linux-only
[target.x86_64-unknown-linux-gnu.dependencies]
ears = "0.8.0"

# This enables to load images more quickly even in debug mode
[profile.dev.package.'*']
opt-level = 3
